--- a/Assignment 19 .tex
+++ b/Assignment 19 .tex
@@ -1,3 +1,4 @@
+
 \documentclass[journal,12pt,twocolumn]{IEEEtran}
 
 \usepackage{setspace}
@@ -7,14 +8,9 @@
 
 
 \usepackage[cmex10]{amsmath}
-%\usepackage{amsthm}
-%\interdisplaylinepenalty=2500
-%\savesymbol{iint}
-%\usepackage{txfonts}
-%\restoresymbol{TXF}{iint}
-%\usepackage{wasysym}
+
 \usepackage{amsthm}
-%\usepackage{iithtlc}
+
 \usepackage{mathrsfs}
 \usepackage{txfonts}
 \usepackage{stfloats}
@@ -22,44 +18,37 @@
 \usepackage{cite}
 \usepackage{cases}
 \usepackage{subfig}
-%\usepackage{xtab}
+
 \usepackage{longtable}
 \usepackage{multirow}
-%\usepackage{algorithm}
-%\usepackage{algpseudocode}
+
 \usepackage{enumitem}
 \usepackage{mathtools}
-\usepackage{graphicx}
-\usepackage{refstyle}
-\usepackage{caption}
 \usepackage{steinmetz}
 \usepackage{tikz}
-%\usepackage{circuitikz}
+\usepackage{circuitikz}
 \usepackage{verbatim}
 \usepackage{tfrupee}
 \usepackage[breaklinks=true]{hyperref}
-%\usepackage{stmaryrd}
-\usepackage{tkz-euclide} % loads  TikZ and tkz-base
-%\usetkzobj{all}
+
+\usepackage{tkz-euclide}
+
 \usetikzlibrary{calc,math}
 \usepackage{listings}
-   \usepackage{color}                                            %%
+    \usepackage{color}                                            %%
     \usepackage{array}                                            %%
     \usepackage{longtable}                                        %%
     \usepackage{calc}                                             %%
     \usepackage{multirow}                                         %%
     \usepackage{hhline}                                           %%
     \usepackage{ifthen}                                           %%
-  %optionally (for landscape tables embedded in another document): %%
     \usepackage{lscape}     
-%\usepackage{multicol}
+\usepackage{multicol}
 \usepackage{chngcntr}
-%\usepackage{enumerate}
 
-%\usepackage{wasysym}
-%\newcounter{MYtempeqncnt}
 \DeclareMathOperator*{\Res}{Res}
-%\renewcommand{\baselinestretch}{2}
+\DeclareMathOperator{\range}{range}
+
 \renewcommand\thesection{\arabic{section}}
 \renewcommand\thesubsection{\thesection.\arabic{subsection}}
 \renewcommand\thesubsubsection{\thesubsection.\arabic{subsubsection}}
@@ -68,7 +57,7 @@
 \renewcommand\thesubsectiondis{\thesectiondis.\arabic{subsection}}
 \renewcommand\thesubsubsectiondis{\thesubsectiondis.\arabic{subsubsection}}
 
-% correct bad hyphenation here
+
 \hyphenation{op-tical net-works semi-conduc-tor}
 \def\inputGnumericTable{}                                 %%
 
@@ -78,8 +67,8 @@ frame=single,
 breaklines=true,
 columns=fullflexible
 }
-
 \begin{document}
+
 
 \newtheorem{theorem}{Theorem}[section]
 \newtheorem{problem}{Problem}
@@ -93,7 +82,6 @@ columns=fullflexible
 \newcommand{\EEQA}{\end{eqnarray}}
 \newcommand{\define}{\stackrel{\triangle}{=}}
 \bibliographystyle{IEEEtran}
-%\bibliographystyle{ieeetr}
 \providecommand{\mbf}{\mathbf}
 \providecommand{\pr}[1]{\ensuremath{\Pr\left(#1\right)}}
 \providecommand{\qfunc}[1]{\ensuremath{Q\left(#1\right)}}
@@ -112,7 +100,7 @@ columns=fullflexible
 %\providecommand{\abs}[1]{\left\vert#1\right\vert}
 \providecommand{\res}[1]{\Res\displaylimits_{#1}} 
 %\providecommand{\norm}[1]{\left\lVert#1\right\rVert}
-\providecommand{\norm}[1]{\lVert#1\rVert}
+%\providecommand{\norm}[1]{\lVert#1\rVert}
 \providecommand{\mtx}[1]{\mathbf{#1}}
 %\providecommand{\mean}[1]{E\left[ #1 \right]}
 \providecommand{\fourier}{\overset{\mathcal{F}}{ \rightleftharpoons}}
@@ -124,27 +112,20 @@ columns=fullflexible
 \providecommand{\dec}[2]{\ensuremath{\overset{#1}{\underset{#2}{\gtrless}}}}
 \newcommand{\myvec}[1]{\ensuremath{\begin{pmatrix}#1\end{pmatrix}}}
 \newcommand{\mydet}[1]{\ensuremath{\begin{vmatrix}#1\end{vmatrix}}}
-%\numberwithin{equation}{section}
 \numberwithin{equation}{subsection}
-%\numberwithin{problem}{section}
-%\numberwithin{definition}{section}
 \makeatletter
 \@addtoreset{figure}{problem}
 \makeatother
 \let\StandardTheFigure\thefigure
 \let\vec\mathbf
-%\renewcommand{\thefigure}{\theproblem.\arabic{figure}}
 \renewcommand{\thefigure}{\theproblem}
-%\setlist[enumerate,1]{before=\renewcommand\theequation{\theenumi.\arabic{equation}}
-%\counterwithin{equation}{enumi}
-%\renewcommand{\theequation}{\arabic{subsection}.\arabic{equation}}
 \def\putbox#1#2#3{\makebox[0in][l]{\makebox[#1][l]{}\raisebox{\baselineskip}[0in][0in]{\raisebox{#2}[0in][0in]{#3}}}}
      \def\rightbox#1{\makebox[0in][r]{#1}}
      \def\centbox#1{\makebox[0in]{#1}}
      \def\topbox#1{\raisebox{-\baselineskip}[0in][0in]{#1}}
      \def\midbox#1{\raisebox{-0.5\baselineskip}[0in][0in]{#1}}
 \vspace{3cm}
-\title{Assignment-19}
+\title{Assignment 19}
 \author{Satyam Singh \\ EE20MTECH14015}
 \maketitle
 \newpage
@@ -152,42 +133,68 @@ columns=fullflexible
 \renewcommand{\thefigure}{\theenumi}
 \renewcommand{\thetable}{\theenumi}
 \begin{abstract}
-This assignment deals with the polynomials.
+This document explains the g.c.d of polynomial.
 \end{abstract}
-Download latex codes from 
+Download all python codes from 
 \begin{lstlisting}
-https://github.com/satyam463/Assignment-19/blob/main/Assignment%2019%20.tex
+https://github.com/satyam463/Assignment-19/blob/main/Assignment%2019%20.py
 \end{lstlisting}
 \section{Problem Statement}
 Find the g.c.d of each of the following pairs of polynomials.
     \begin{align}
     2x^{5}-x^{3}-3x^{2}-6x+4 , x^{4}+x^{3}-x^{2}-2x-2
     \end{align}
-\section{Solution} 
-Let the field be rational numbers
- \begin{align}
-     f\brak{x}=2x^{5}-x^{3}-3x^{2}-6x+4 \\
+\section{Solution}
+Refer Table \ref{table:1}.
+\begin{table*}[ht!]
+\begin{center}
+\begin{tabular}{|l|l|}
+\hline
+\multicolumn{2}{|c|}{
+Let the field be rational numbers}\\[1ex]
+\hline
+\textbf{Steps} & \textbf{Explanation} \\[0.5ex]
+\hline
+\text{Say f\brak{x} and g\brak{x} } & 
+    \parbox{10cm}{\begin{align}
+    f\brak{x}=2x^{5}-x^{3}-3x^{2}-6x+4 \\
      g\brak{x}=x^{4}+x^{3}-x^{2}-2x-2
- \end{align}
- \begin{multline}
+\end{align}} \\[0.5ex]
+\hline
+\text{Expanding f\brak{x} in term of g\brak{x}} & 
+ \parbox{10cm}{\begin{multline}
  \begin{aligned}
- 2x^{5}-x^{3}-3x^{2}-6x+4 = \brak{x^{4}+x^{3}-x^{2}-2x-2}\\\brak{2x-2}+\brak{3x^{3}-x^{2}-6x}
+ 2x^{5}-x^{3}-3x^{2}-6x+4 = \brak{x^{4}+x^{3}-x^{2}-2x-2}\brak{2x-2}\\+\brak{3x^{3}-x^{2}-6x}
  \end{aligned}
- \end{multline}
- \begin{multline}
- \begin{aligned}
- x^{4}+x^{3}-x^{2}-2x-2 = \brak{3x^{3}-x^{2}-6x}\brak{\frac{1}{3}x+\frac{4}{9}}\\+\brak{\frac{13}{9}x^{2}+\frac{2}{3}x-2}
+ \end{multline}}\\[0.5ex]
+\hline
+\text{Expanding degree four polynomial} &
+\parbox{10cm}{\begin{multline}
+\begin{aligned}
+ x^{4}+x^{3}-x^{2}-2x-2 = \brak{3x^{3}-x^{2}-6x}\brak{\frac{1}{3}x+\frac{4}{9}}+\brak{\frac{13}{9}x^{2}+\frac{2}{3}x-2}
  \end{aligned}
- \end{multline}
- \begin{multline}
- \begin{aligned}
-  3x^{3}-x^{2}-6x= \brak{\frac{13}{9}x^{2}+\frac{2}{3}x-2}\brak{\frac{27}{13}x-\frac{117}{169}}\\+\brak{-\frac{126}{169}x-\frac{558}{169}}
+ \end{multline}}\\[0.5ex]
+\hline
+\text{Expanding degree three polynomial} &
+\parbox{10cm}{\begin{multline}
+\begin{aligned}
+ 3x^{3}-x^{2}-6x= \brak{\frac{13}{9}x^{2}+\frac{2}{3}x-2}\brak{\frac{27}{13}x-\frac{279}{169}}+\brak{-\frac{126}{169}x-\frac{558}{169}}
  \end{aligned}
- \end{multline}
- \begin{multline}
- \begin{aligned}
- \frac{13}{9}x^{2}+\frac{2}{3}x-2 = \brak{-\frac{126}{169}x-\frac{558}{169}}\brak{-\frac{169}{1134}x-\frac{61009}{1134}}\\+\brak{\frac{10309}{441}}
+ \end{multline}}\\[0.5ex]
+ \hline
+ \text{Expanding degree two polynomial} &
+\parbox{10cm}{\begin{multline}
+\begin{aligned}
+ \frac{13}{9}x^{2}+\frac{2}{3}x-2 = \brak{-\frac{126}{169}x-\frac{558}{169}}\brak{-\frac{2197}{1134}x+\frac{61009}{7938}}+\brak{\frac{10309}{441}}
  \end{aligned}
- \end{multline}
- Since it contains scalar polynomial hence the g.c.d of f\brak{x} ,  g\brak{x} is 1.
+ \end{multline}}\\
+ & Since it contains scalar polynomial hence the g.c.d of f\brak{x} ,  g\brak{x} is 1.
+ \\[0.5ex]
+ \hline
+\end{tabular}
+\caption{Solution}
+\label{table:1}
+\end{center}
+\vspace{-0.5cm}
+\end{table*}
 \end{document}
